--- a/docs/views/deployment.adoc
+++ b/docs/views/deployment.adoc
@@ -2,6 +2,6 @@
 [[deployment-view]]
 == Vista de Despliegue
 
-La vista de despliegue nos ayudará a ...
+La vista de despliegue nos ayudará a tener un mejor orden al momento de hacer el despliegue.
 
 image::deployment.png[Context Diagram, width=600, align=center]
